Backport to 9.0 branch: [NETBEANS-817] Preventing exceptions when opening project: (#552)