@@ -30,7 +30,9 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.URL;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicReference;
@@ -393,7 +395,18 @@ public class JavacParserTest extends NbTestCase {
         
         return JavacParser.validateSourceLevel("1.7", info, false);
     }
-    
+
+    public void testValidateCompilerOptions() {
+        List<String> input = Arrays.asList("--add-exports", "foo/bar=foobar",
+                                           "--add-exports=foo2/bar=foobar",
+                                           "--limit-modules", "foo",
+                                           "--add-modules", "foo",
+                                           "--add-reads", "foo=foo2");
+        assertEquals(Collections.emptyList(), JavacParser.validateCompilerOptions(input, com.sun.tools.javac.code.Source.lookup("1.8")));
+        assertEquals(input, JavacParser.validateCompilerOptions(input, com.sun.tools.javac.code.Source.lookup("9")));
+        assertEquals(input, JavacParser.validateCompilerOptions(input, com.sun.tools.javac.code.Source.lookup("10")));
+    }
+
     private FileObject createFile(String path, String content) throws Exception {
         FileObject file = FileUtil.createData(sourceRoot, path);
         TestUtilities.copyStringToFile(file, content);
